--- a/03core/teach_me_python/quiz.ipynb
+++ b/03core/teach_me_python/quiz.ipynb
@@ -58,6 +58,68 @@
     "b = \"javascript\"\n",
     "assert a == b, \"Languages are different\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 87_list_addition.py\n",
+    "What is the output of the following code?\n",
+    "\n",
+    "A) [3]\n",
+    "B) [3, 3]\n",
+    "C) [3, 3] [3, 3]\n",
+    "D) [3, 3, 3, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 3] [3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = j = [3]\n",
+    "i += j\n",
+    "print(i, j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 83_tuples_and dictionaries.py\n",
+    "What is the output of this code?\n",
+    "\n",
+    "A) SyntaxError\n",
+    "B) TypeError\n",
+    "C) {\"py\": None, \"th\": None, \"on\": None}\n",
+    "D) {'p': 'y', 't': 'h', 'o': 'n'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'p': 'y', 't': 'h', 'o': 'n'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dict((\"py\", \"th\", \"on\")))"
+   ]
   }
  ],
  "metadata": {
