--- a/04ds/2.3时间复杂度.ipynb
+++ b/04ds/2.3时间复杂度.ipynb
@@ -199,6 +199,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def exp_recur(n: int) -> int:\n",
+    "    \"\"\"指数阶（递归实现）\"\"\"\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    return exp_recur(n - 1) + exp_recur(n - 1) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def logarithmic(n: int) -> int:\n",
     "    \"\"\"对数阶（循环实现）\"\"\"\n",
     "    count = 0\n",
